# pid-memory-inspector

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
scripts/: analyze_processes.py  analyze_system.py  collect_memory.py  gen_module_tree.py
scripts/utils/: memory.py  parser.py  process_analysis.py  system_analysis.py
src/: app.py
src/adapters/: dumps_reader.py
src/application/: services.py
src/config/: settings.py
src/domain/: filters.py  models.py
src/domain/analysis/: timeseries.py  tree_stats.py
src/interfaces/web/: routes.py  snapshot_level_routes.py  snapshot_pid_plot.py  snapshot_pid_routes.py
src/interfaces/web/renderers/: proc_tree.py
src/interfaces/web/static/: mem.css
src/utils/: parser.py  time.py
